// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prefer-newline-after-file-header > invalid > Invalid #0: no-newline > errors 1`] = `
[
  {
    "column": 1,
    "endColumn": 31,
    "endLine": 4,
    "fix": {
      "range": [
        30,
        30,
      ],
      "text": "
",
    },
    "line": 4,
    "message": "require a newline before",
    "messageId": "requireNewlineBefore",
    "nodeType": "ExportNamedDeclaration",
    "ruleId": "prefer-newline-after-file-header",
    "severity": 2,
  },
]
`;

exports[`prefer-newline-after-file-header > invalid > Invalid #0: no-newline > output 1`] = `
"/**
 * @file eslint config
 */

export const foobar = 'foobar'"
`;

exports[`prefer-newline-after-file-header > invalid > Invalid #1: same-line > errors 1`] = `
[
  {
    "column": 4,
    "endColumn": 34,
    "endLine": 3,
    "fix": {
      "range": [
        30,
        30,
      ],
      "text": "

",
    },
    "line": 3,
    "message": "require a newline before",
    "messageId": "requireNewlineBefore",
    "nodeType": "ExportNamedDeclaration",
    "ruleId": "prefer-newline-after-file-header",
    "severity": 2,
  },
]
`;

exports[`prefer-newline-after-file-header > invalid > Invalid #1: same-line > output 1`] = `
"/**
 * @file eslint config
 */

export const foobar = 'foobar'"
`;

exports[`prefer-newline-after-file-header > invalid > Invalid #2: user-defined-jsdoc > errors 1`] = `
[
  {
    "column": 4,
    "endColumn": 34,
    "endLine": 3,
    "fix": {
      "range": [
        32,
        32,
      ],
      "text": "

",
    },
    "line": 3,
    "message": "require a newline before",
    "messageId": "requireNewlineBefore",
    "nodeType": "ExportNamedDeclaration",
    "ruleId": "prefer-newline-after-file-header",
    "severity": 2,
  },
]
`;

exports[`prefer-newline-after-file-header > invalid > Invalid #2: user-defined-jsdoc > output 1`] = `
"/**
 * @foobar eslint config
 */

export const foobar = 'foobar'"
`;
